# stuff

./: README.md  deez.theme.css  mytheme.omp.json  stuff.md
1º ano/1º semestre/PF/: ficha1.hs  ficha2.hs  ficha3.hs  ficha4.hs  ficha5.hs  ficha50questoes.hs  ficha6.hs  ficha7.hs  ficha8.hs  ficha9.hs  pog.hs  slides.hs  tests.hs
1º ano/1º semestre/Simulação Arena/: Model1.dsn  Model1.opw  Model1.out  artigosloja.Backup.doe  artigosloja.doe  artigosloja.dsn  artigosloja.opw  artigosloja.out  artigosloja.p  bicicletas.Backup.doe  bicicletas.doe  bicicletas.dsn  bicicletas.opw  bicicletas.out  bicicletas.p  montagemcarros.Backup.doe  montagemcarros.doe  montagemcarros.dsn  montagemcarros.out  records.doe  sapatos.accdb  sapatos.doe  sapatos.dsn  sapatos.opw  sapatos.out  supermercado.doe  supermercado.dsn  supermercado.opw  supermercado.out  tapete.accdb  tapete.doe  tapete.dsn  tapete.opw  tapete.out  tapete.p
1º ano/2º semestre/LI2/: ficha1.c  ficha2.c  ficha3.c  ficha4.c
1º ano/2º semestre/PI/: aulas.c  lul.c  pingpong.c
2º Ano/1º Semestre/LI3/: prog.c
2º Ano/2º Semestre/BD/: Conceitual_1.xml  Definição do Sistema.docx  requisitos.xlsx
PI/Ficha 1/: circulo.c
Yr1/: readme.md
Yr1/Sem1/AL/: readme.md
Yr1/Sem1/Cálculo/: readme.md
Yr1/Sem1/EES/: readme.md
Yr1/Sem1/LI1/: readme.md
Yr1/Sem1/PF/: pog.hs  slides.hs
Yr1/Sem1/TMD/: readme.md
Yr1/Sem2/Análise/: readme.md
Yr1/Sem2/LI2/: ficha2.c  readme.md
Yr2/: readme.md
Yr2/Sem1/: readme.md
Yr2/Sem2/: readme.md
Yr3/Sem2/CG/Práticas/P11/code/: CMakeLists.txt  main.cpp
Yr4/CPar/: readme.md
(+1472 files in other folders)
